<?xml version="1.0" encoding="ISO-8859-1"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
  xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">

  <modelVersion>4.0.0</modelVersion>
  <parent>
    <groupId>se.csn</groupId>
    <artifactId>notmotor</artifactId>
    <version>1.0-SNAPSHOT</version>
    <relativePath>../NotmotorBuild</relativePath>
  </parent>

  <groupId>se.csn.notmotor</groupId>
  <artifactId>notmotoradminwebb</artifactId>

  <version>2.0-SNAPSHOT</version>
  <packaging>war</packaging>
  <description>Notmotor Admin Webb : Parent: NotmotorBuild</description>
  <name>NotmotorAdminWebb</name>
  <url>../../../NotmotorAdminWebb/target/site</url>
  <inceptionYear>2007</inceptionYear>
  <organization>
    <name>Centrala studiestödsnämnden</name>
    <url>http://www.csn.se/</url>
  </organization>

  <dependencies>
    <dependency>
      <groupId>se.csn</groupId>
      <artifactId>ark</artifactId>
      <version>3.0.1</version>
    </dependency>
    <dependency>
      <groupId>se.csn</groupId>
      <artifactId>utils</artifactId>
      <version>1.0.0</version>
    </dependency>
    <dependency>
      <groupId>se.csn.notmotor</groupId>
      <artifactId>notmotorjar</artifactId>
      <version>2.1-SNAPSHOT</version>
      <optional>true</optional>
    </dependency>
    <dependency>
      <groupId>log4j</groupId>
      <artifactId>log4j</artifactId>
      <version>1.2.8</version>
      <optional>true</optional>
    </dependency>
    <dependency>
      <groupId>javax.servlet</groupId>
      <artifactId>jstl</artifactId>
      <version>1.2</version>
    </dependency>

    <!-- 	<dependency> -->
    <!-- 	    <groupId>org.glassfish</groupId> -->
    <!-- 	    <artifactId>javax.faces</artifactId> -->
    <!-- 	    <version>2.4.0</version> -->
    <!-- 	    <scope>provided</scope> -->
    <!-- 	</dependency> -->

    <dependency>
      <groupId>com.sun.faces</groupId>
      <artifactId>jsf-api</artifactId>
      <version>2.2.20</version>
    </dependency>
    <dependency>
      <groupId>com.sun.faces</groupId>
      <artifactId>jsf-impl</artifactId>
      <version>2.2.20</version>
      <scope>provided</scope>
    </dependency>
    <dependency>
      <groupId>javax.el</groupId>
      <artifactId>javax.el-api</artifactId>
      <version>3.0.0</version>
    </dependency>


    <!--    	<dependency> -->
    <!-- 	  	<groupId>com.ibm.websphere</groupId> -->
    <!-- 		<artifactId>j2ee</artifactId> -->
    <!--   		<version>8.0</version> -->
    <!--   		<scope>provided</scope> -->
    <!--   	</dependency> -->
    <!--    	<dependency> -->
    <!-- 	  	<groupId>com.ibm.websphere.was</groupId> -->
    <!-- 		<artifactId>management</artifactId> -->
    <!--   		<version>8.0</version> -->
    <!--   		<scope>provided</scope> -->
    <!--   	</dependency> -->
    <!--    	<dependency> -->
    <!-- 	  	<groupId>com.ibm.websphere.was</groupId> -->
    <!-- 		<artifactId>wsexception</artifactId> -->
    <!--   		<version>8.0</version> -->
    <!--   		<scope>provided</scope> -->
    <!--   	</dependency> -->
    <!--    	<dependency> -->
    <!--    		<groupId>com.ibm.ws.jsf</groupId> -->
    <!--    		<artifactId>myfaces</artifactId> -->
    <!--    		<version>2.0</version> -->
    <!--   		<scope>provided</scope> -->
    <!--    	</dependency> -->
    <!--    	<dependency> -->
    <!--    		<groupId>com.ibm.ws.admin</groupId> -->
    <!--    		<artifactId>core</artifactId> -->
    <!--    		<version>8.0</version> -->
    <!--  		<scope>provided</scope> -->
    <!--    		</dependency> -->
    <dependency>
      <groupId>junit</groupId>
      <artifactId>junit</artifactId>
      <version>4.13</version>
      <scope>test</scope>
    </dependency>
  </dependencies>


  <build>
    <!---
  <sourceDirectory>${project.basedir}/JavaSource</sourceDirectory>
  <testSourceDirectory>${project.basedir}/test</testSourceDirectory>
  <outputDirectory>${project.basedir}/target/classes</outputDirectory>
  <testOutputDirectory>${project.basedir}/target/test-classes</testOutputDirectory>

  <resources>
   <resource>
    <directory>${project.basedir}/JavaSource/se/csn/notmotor/admin/resources</directory>
    <targetPath>se/csn/notmotor/admin/resources</targetPath>
   </resource>
   <resource>
    <directory>${project.basedir}/JavaSource</directory>
    <includes>
     <include>**/*.java</include>
    </includes>
   </resource>
  </resources>-->
    <testResources>
      <testResource>
        <directory>../NotmotorProperties/UTV/IW/properties/arkitektur</directory>
        <includes>
          <include>*.properties</include>
        </includes>
      </testResource>
      <testResource>
        <directory>../NotmotorProperties/UTV/IW/properties/notmotor</directory>
        <includes>
          <include>*.properties</include>
        </includes>
      </testResource>
      <testResource>
        <directory>../NotmotorProperties/UTV/IW/properties/log/notmotor</directory>
        <includes>
          <include>*.properties</include>
        </includes>
      </testResource>
    </testResources>
    <defaultGoal>compile</defaultGoal>

    <plugins>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-war-plugin</artifactId>
        <configuration>
          <warSourceExcludes></warSourceExcludes>
          <archive>
            <manifest>
              <addClasspath>true</addClasspath>
            </manifest>
          </archive>
          <webXml>${project.basedir}/WebContent/WEB-INF/web.xml</webXml>
          <!--
     <warSourceDirectory>${project.basedir}/WebContent</warSourceDirectory> -->
          <addMavenDescriptor>false</addMavenDescriptor>
        </configuration>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-compiler-plugin</artifactId>
        <configuration>
     <release>11</release>
        </configuration>
      </plugin>
    </plugins>

  </build>

</project>
